--- a/src/app/feature/user/user-list/user-list.component.html
+++ b/src/app/feature/user/user-list/user-list.component.html
@@ -1,1 +1,35 @@
-<p>user-list works!</p>
+<section class="heading">
+    <span class='page-title font-weight-bold font-italic'>[{{ title }}]</span>
+    <a routerLink='/user/create'>
+        <img width='20' height='20' src='assets/add-icon.png' title='Add User'>
+    </a>
+</section>
+<table *ngIf="users" class="table table-sm table-striped">
+    <thead>
+        <tr>
+            <th>Username</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Reviewer?</th>
+            <th>Admin?</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of users">
+            <td>{{ user.userName }}</td>
+            <td>{{ user.firstName }}</td>
+            <td>{{ user.lastName }}</td>
+            <td>{{ user.reviewer }}</td>
+            <td>{{ user.admin }}</td>
+            <td>
+                <a routerLink='/user/detail/{{user.id}}'>
+                    <img width='20' height='20' src='assets/details.png' title='User Details'>
+                </a> | 
+                <a routerLink='/user/edit/{{user.id}}'>
+                    <img width='20' height='20' src='assets/pencil-icon.png' title='Edit User'>
+                </a>
+            </td>
+        </tr>
+    </tbody>
+</table>
