--- a/src/app/feature/user/user-list/user-list.component.html
+++ b/src/app/feature/user/user-list/user-list.component.html
@@ -20,8 +20,8 @@
             <td>{{ user.userName }}</td>
             <td>{{ user.firstName }}</td>
             <td>{{ user.lastName }}</td>
-            <td>{{ user.reviewer }}</td>
-            <td>{{ user.admin }}</td>
+            <td>{{ user.reviewer == 1 ? 'Yes' : 'No' }}</td>
+            <td>{{ user.admin == 1 ? 'Yes' : 'No' }}</td>
             <td>
                 <a routerLink='/user/detail/{{user.id}}'>
                     <img width='20' height='20' src='assets/details.png' title='User Details'>
