--- a/src/app/feature/user/user-maint-shared/user-maint/user-maint.component.html
+++ b/src/app/feature/user/user-maint-shared/user-maint/user-maint.component.html
@@ -57,7 +57,7 @@
                     Reviewer?:
                 </td>
                 <td>
-                    <input [(ngModel)]="user.reviewer" class="rounded" type="text">
+                    <input [(ngModel)]="user.reviewer" type="checkbox">
                 </td>
             </tr>
             <tr>
@@ -65,7 +65,7 @@
                     Admin?:
                 </td>
                 <td>
-                    <input [(ngModel)]="user.admin" class="rounded" type="text">
+                    <input [(ngModel)]="user.admin" type="checkbox">
                 </td>
             </tr>
         </table>
