--- a/src/app/feature/request/request-create/request-create.component.html
+++ b/src/app/feature/request/request-create/request-create.component.html
@@ -1,1 +1,41 @@
-<p>request-create works!</p>
+<div *ngIf="request" class="component">
+    <section class="heading">
+        <span class="page-title font-weight-bold font-italic">{{title}}</span>
+        <span> | <a routerLink="/request/list">Return to Request List</a></span>
+    </section>
+    <main class="single">
+        <table class="table table-sm">
+            <tr>
+                <td>User:</td>
+                <td>
+                    <select [(ngModel)]="request.user" class="rounded">
+                        <option *ngFor="let user of users" [ngValue]='user'>{{user.userName}}</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Description:</td>
+                <td><input [(ngModel)]="request.description" class="rounded" type="text"></td>
+            </tr>
+            <tr>
+                <td>Justification:</td>
+                <td><input [(ngModel)]="request.justification" class="rounded" type="text"></td>
+            </tr>
+            <tr>
+                <td>Date Needed:</td>
+                <td><input [(ngModel)]="request.dateNeeded" class="rounded" type="text" placeholder="yyyy-mm-dd"></td>
+            </tr>
+            <tr>
+                <td>Delivery Mode:</td>
+                <td><input [(ngModel)]="request.deliveryMode" class="rounded" type="text" placeholder="Mail or Pickup"></td>
+            </tr>
+            <tr>
+                <td>Total:</td>
+                <td><input [(ngModel)]="request.total" class="rounded" type="text"></td>
+            </tr>
+        </table>
+    </main>
+    <span>
+        <button (click)="create()" class="btn btn-sm btn-primary">Create</button>
+    </span>
+</div>
