--- a/src/app/feature/user/user-detail/user-detail.component.html
+++ b/src/app/feature/user/user-detail/user-detail.component.html
@@ -4,7 +4,7 @@
         <span> | <a routerLink="/user/list">Return to User List</a></span>
     </section>
     <main class="single">
-        <table class="table table-sm">
+        <table class="table table-sm table-striped">
             <tr>
                 <td>ID</td>
                 <td>{{user.id}}</td>
