--- a/src/app/feature/request/request-detail/request-detail.component.html
+++ b/src/app/feature/request/request-detail/request-detail.component.html
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <td>Date Needed:</td>
-                <td><input [(ngModel)]="request.dateNeeded" class="rounded" type="number" disabled></td>
+                <td><input [(ngModel)]="request.dateNeeded" class="rounded" type="date" disabled></td>
             </tr>
             <tr>
                 <td>Delivery Mode:</td>
@@ -40,10 +40,6 @@
             <tr>
                 <td>Submitted Date:</td>
                 <td><input [(ngModel)]="request.submittedDate" class="rounded" type="text" disabled></td>
-            </tr>
-            <tr>
-                <td>Reason for Rejection:</td>
-                <td><input [(ngModel)]="request.reasonForRejection" class="rounded" type="text" disabled></td>
             </tr>
         </table>
     </main>
