--- a/src/app/feature/user/user-list/user-list.component.html
+++ b/src/app/feature/user/user-list/user-list.component.html
@@ -7,6 +7,7 @@
 <table *ngIf="users" class="table table-sm table-striped">
     <thead>
         <tr>
+            <th>ID</th>
             <th>Username</th>
             <th>First Name</th>
             <th>Last Name</th>
@@ -17,6 +18,7 @@
     </thead>
     <tbody>
         <tr *ngFor="let user of users">
+            <td>{{ user.id }}</td>
             <td>{{ user.userName }}</td>
             <td>{{ user.firstName }}</td>
             <td>{{ user.lastName }}</td>
