--- a/src/app/feature/request/request-create/request-create.component.html
+++ b/src/app/feature/request/request-create/request-create.component.html
@@ -13,11 +13,11 @@
             </tr>
             <tr>
                 <td>Description:</td>
-                <td><input [(ngModel)]="request.description" class="rounded" type="text"></td>
+                <td><input [(ngModel)]="request.description" class="rounded" type="text" required placeholder="Required Field"></td>
             </tr>
             <tr>
                 <td>Justification:</td>
-                <td><input [(ngModel)]="request.justification" class="rounded" type="text"></td>
+                <td><input [(ngModel)]="request.justification" class="rounded" type="text" placeholder="Required Field"></td>
             </tr>
             <tr>
                 <td>Date Needed:</td>
