--- a/src/app/feature/request/request-detail/request-detail.component.html
+++ b/src/app/feature/request/request-detail/request-detail.component.html
@@ -10,7 +10,7 @@
                 <td>{{request.id}}</td>
             </tr>
             <tr>
-                <td>User:</td>
+                <td>User ID:</td>
                 <td><input [(ngModel)]="request.user.id" class="rounded" type="text" disabled></td>
             </tr>
             <tr>
