--- a/src/app/feature/line-item/line-item-edit/line-item-edit.component.html
+++ b/src/app/feature/line-item/line-item-edit/line-item-edit.component.html
@@ -1,1 +1,25 @@
-<p>line-item-edit works!</p>
+<div>
+    <section class="heading">
+        <span class="page-title font-weight-bold font-italic">{{title}}</span>
+        <span> | <a routerLink="/request/list">Return to Request List</a></span>
+    </section>
+    <main class="single">
+        <table class="table table-sm">
+            <tr>
+                <td>Product:</td>
+                <select [(ngModel)]="lineItem.product" class="rounded">
+                    <option *ngFor="let product of products" [ngValue]="product">{{ product.name }}</option>
+                </select>
+            </tr>
+            <tr>
+                <td>Quantity:</td>
+                <td>
+                    <input [(ngModel)]="lineItem.quantity" class="rounded" type="number">
+                </td>
+            </tr>
+        </table>
+    </main>
+       <span>
+           <button (click)="save()" class="btn btn-sm btn-primary">{{submitBtnTitle}}</button>
+        </span>
+</div>
