--- a/src/app/feature/product/product-maint-shared/product-maint-shared.component.html
+++ b/src/app/feature/product/product-maint-shared/product-maint-shared.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <span class='component-title'>[{{title}}]</span>
 <span> | <a routerLink="/product/list">Return to Product List</a></span>
 <p *ngIf='!product'>Loading...</p>
