--- a/src/app/feature/welcome/welcome/welcome.component.html
+++ b/src/app/feature/welcome/welcome/welcome.component.html
@@ -1,3 +1,14 @@
-<h3>Welcome to the Purchase Request System!</h3>
-<p>Here,  you will be able to view lists of users, products, and vendors.  You can also submit and view product requests.</p>
-<p>Enjoy!</p>
+<app-menu></app-menu>
+<section class="heading">
+    <span class='page-title font-weight-bold font-italic' style="font-size: x-large;">Welcome to the Purchase Request System!</span>
+</section>
+<section class="body">
+    <p>Here,  you will be able to:</p>
+    <li>View lists of Users, Vendors, and Products.</li>
+    <li>Create purchase requests in the "Requests" tab.</li>
+    <li>View/edit purchase requests.</li>
+    <li>Add items to a purchase request.</li>
+    <li>Submit requests for review.</li>
+    <p></p>
+    <p>Enjoy!</p>
+</section>
