--- a/src/app/feature/request/request-approve/request-approve.component.html
+++ b/src/app/feature/request/request-approve/request-approve.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <section class="heading">
     <span class="page-title font-weight-bold font-italic">[{{title}}]</span>
     <span>&nbsp;<a routerLink="/request/review">Return to List</a></span>
