--- a/src/app/feature/request/request-review/request-review.component.html
+++ b/src/app/feature/request/request-review/request-review.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <section class="heading">
     <span class="page-title font-weight-bold font-italic">[{{title}}]</span>
     <span> | <a routerLink="/request/list">Return to Request List</a></span>
