--- a/src/app/feature/user/user-list/user-list.component.html
+++ b/src/app/feature/user/user-list/user-list.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <section class="heading">
     <span class='page-title font-weight-bold font-italic'>[{{ title }}]</span>
     <a routerLink='/user/create'>
@@ -11,8 +12,6 @@
             <th>Username</th>
             <th>First Name</th>
             <th>Last Name</th>
-            <th>Reviewer?</th>
-            <th>Admin?</th>
             <th>Action</th>
         </tr>
     </thead>
@@ -22,8 +21,6 @@
             <td>{{ user.userName }}</td>
             <td>{{ user.firstName }}</td>
             <td>{{ user.lastName }}</td>
-            <td>{{ user.reviewer == 1 ? 'Yes' : 'No' }}</td>
-            <td>{{ user.admin == 1 ? 'Yes' : 'No' }}</td>
             <td>
                 <a routerLink='/user/detail/{{user.id}}'>
                     <img width='20' height='20' src='assets/details.png' title='User Details'>
