--- a/src/app/feature/user/user-maint-shared/user-maint/user-maint.component.html
+++ b/src/app/feature/user/user-maint-shared/user-maint/user-maint.component.html
@@ -1,3 +1,4 @@
+<app-menu></app-menu>
 <span class='component-title'>[{{title}}]</span>
 <span> | <a routerLink="/user/list">Return to User List</a></span>
 <p *ngIf='!user'>Loading...</p>
