--- a/src/app/feature/request/request-detail/request-detail.component.html
+++ b/src/app/feature/request/request-detail/request-detail.component.html
@@ -42,6 +42,14 @@
                 <td>Submitted Date:</td>
                 <td><input [(ngModel)]="request.submittedDate" class="rounded" type="text" size="75" disabled></td>
             </tr>
+            <tr>
+                <td>
+                    Reason For Rejection:
+                </td>
+                <td>
+                    <input [(ngModel)]="request.reasonForRejection" class="rounded" type="text" size="75" disabled>
+                </td>
+            </tr>
         </table>
     </main>
     <span>
