--- a/src/app/feature/welcome/welcome/welcome.component.html
+++ b/src/app/feature/welcome/welcome/welcome.component.html
@@ -3,12 +3,15 @@
     <span class='page-title font-weight-bold font-italic' style="font-size: x-large;">Welcome to the Purchase Request System!</span>
 </section>
 <section class="body">
+    <p></p>
     <p>Here,  you will be able to:</p>
     <li>View lists of Users, Vendors, and Products.</li>
     <li>Create purchase requests in the "Requests" tab.</li>
     <li>View/edit purchase requests.</li>
     <li>Add items to a purchase request.</li>
     <li>Submit requests for review.</li>
+    <p></p>
+    <p><strong>For help, please contact your System Administrator.</strong></p>
     <p></p>
     <p>Enjoy!</p>
 </section>
