--- a/src/app/feature/user/user-login/user-login.component.html
+++ b/src/app/feature/user/user-login/user-login.component.html
@@ -1,8 +1,8 @@
 <div class='component-content'>
     <form class='text-center'>
-      <table *ngIf='user' class='table-sm' style='margin:50px auto;padding: 5px 20px;border:1px solid silver;width:400px;'>
+      <table *ngIf='user' class='table-sm' style='margin:50px auto;padding: 5px 20px;border:10px solid black;width:500px;'>
         <tr class='text-center'>
-          <td colspan="2">Login</td>
+          <td colspan="2"><strong>Login</strong></td>
         </tr>
         <tr>
           <td>Username:</td>
