Updated date formatting, populated option boxes

--- a/src/app/feature/product/product-list/product-list.component.html
+++ b/src/app/feature/product/product-list/product-list.component.html
@@ -9,6 +9,7 @@
     <thead>
         <tr>
             <th>Name</th>
+            <th>Vendor</th>
             <th>Part Number</th>
             <th>Price</th>
             <th>Unit</th>
@@ -17,8 +18,9 @@
     <tbody>
         <tr *ngFor="let product of products">
             <td>{{ product.name }}</td>
+            <td>{{ product.vendor.name }}</td>
             <td>{{ product.partNumber }}</td>
-            <td>{{ product.price }}</td>
+            <td>{{ product.price | currency }}</td>
             <td>{{ product.unit }}</td>
             <td>
                 <a routerLink='/product/detail/{{product.id}}'>
