--- a/src/app/feature/request/request-detail/request-detail.component.html
+++ b/src/app/feature/request/request-detail/request-detail.component.html
@@ -40,7 +40,7 @@
             </tr>
             <tr>
                 <td>Submitted Date:</td>
-                <td><input [(ngModel)]="request.submittedDate" class="rounded" type="text" size="75" disabled></td>
+                <td><input [(ngModel)]="request.submittedDate" class="rounded" type="datetime-local" size="75" disabled></td>
             </tr>
             <tr>
                 <td>
