--- a/src/app/feature/product/product-maint-shared/product-maint-shared.component.html
+++ b/src/app/feature/product/product-maint-shared/product-maint-shared.component.html
@@ -26,7 +26,7 @@
                     Price:
                 </td>
                 <td>
-                    <input [(ngModel)]="product.price" class="rounded" type="text" placeholder="Price">
+                    $<input [(ngModel)]="product.price" class="rounded" type="text" placeholder="Price">
                 </td>
             </tr>
             <tr>
@@ -40,7 +40,7 @@
             <tr>
                 <td>Vendor:</td>
                 <td>
-                    <select [(ngModel)]="product.vendor" class="rounded">
+                    <select [(ngModel)]="product.vendor" class="rounded" [compareWith]="compVendor">
                         <option *ngFor="let vendor of vendors" [ngValue]='vendor'>{{vendor.name}}</option>
                     </select>
                 </td>
