--- a/src/app/feature/request/request-edit/request-edit.component.html
+++ b/src/app/feature/request/request-edit/request-edit.component.html
@@ -42,7 +42,7 @@
                     Date Needed:
                 </td>
                 <td>
-                    <input [(ngModel)]="request.dateNeeded" class="rounded" type="text">
+                    <input [(ngModel)]="request.dateNeeded" class="rounded" type="date">
                 </td>
             </tr>
             <tr>
@@ -74,7 +74,7 @@
                     Submitted Date:
                 </td>
                 <td>
-                    <input [(ngModel)]="request.submittedDate" class="rounded" type="datetime" disabled>
+                    <input [(ngModel)]="request.submittedDate" class="rounded" type="datetime-local" disabled>
                 </td>
             </tr>
         </table>
