--- a/src/app/feature/request/request-lines/request-lines.component.html
+++ b/src/app/feature/request/request-lines/request-lines.component.html
@@ -19,7 +19,7 @@
             <td>{{ request.id }}</td>
             <td>{{ request.description }}</td>
             <td>{{ request.status }}</td>
-            <td>${{ request.total }}</td>
+            <td>{{ request.total | currency }}</td>
         </tr>
     </tbody>
 </table>
