--- a/src/app/feature/request/request-review/request-review.component.html
+++ b/src/app/feature/request/request-review/request-review.component.html
@@ -22,7 +22,7 @@
             <td>{{ request.description }}</td>
             <td>{{ request.status }}</td>
             <td>{{ request.total }}</td>
-            <td>{{ request.submittedDate }}</td>
+            <td>{{ request.submittedDate | date }}</td>
             <td>
                 <a routerLink='/request/approve/{{request.id}}'>
                     <img width='20' height='20' src='assets/review.png' title='Review'>
