fixed option boxes

--- a/src/app/feature/line-item/line-item-edit/line-item-edit.component.html
+++ b/src/app/feature/line-item/line-item-edit/line-item-edit.component.html
@@ -8,7 +8,7 @@
         <table class="table table-sm">
             <tr>
                 <td>Product:</td>
-                <select [(ngModel)]="lineItem.product" class="rounded">
+                <select [(ngModel)]="lineItem.product" class="rounded" [compareWith]="compProduct">
                     <option *ngFor="let product of products" [ngValue]="product">{{ product.name }} | {{ product.vendor.name }}</option>
                 </select>
             </tr>
