--- a/src/app/feature/request/request-approve/request-approve.component.html
+++ b/src/app/feature/request/request-approve/request-approve.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <section class="heading">
     <span class="page-title font-weight-bold font-italic">[{{title}}]</span>
-    <span>&nbsp;<a routerLink="/request/review">Return to List</a></span>
+    <span>&nbsp;<a routerLink="/request/review">Return to Request List</a></span>
 </section>
 <table *ngIf="request" class="table table-sm table-striped">
     <thead>
